# rag_flink

./: .env  .gitignore  Dockerfile  README.md  api_server.py  cloudbuild.yaml  main.py  pyproject.toml  test_milvus_connection.py
.cursor/rules/: confluent-cli-org-env.mdc  env-kafka-standards.mdc  error-handling-standards.mdc  merge-approval.mdc  poetry-usage.mdc  project-structure.mdc  python-poetry-standards.mdc
document_retriever/: __init__.py
document_retriever/document_retriever/: __init__.py  retriever.py
extrair-chunks-pdf/: Dockerfile  README.md
extrair-chunks-pdf/src/: chunks_processor.py
extrair_chunks_pdf/: README.md  chunks_processor.py
extrair_chunks_pdf/extrair_chunks_pdf/: chunks_processor.py  chunks_processor_main.py
milvus_sink/milvus_sink/: __init__.py  milvus_sink.py
pdf-processor/: .env  Dockerfile  pyproject.toml
pdf-processor/src/: consume_messages.py  main.py  register_schema.py  reset_offsets.py
pdf_processor/: cloudbuild.yaml  kafka-client.properties  main.py  pdf_processor.py
pdf_processor/pdf_processor/: README.md  pdf_processor.py  pdf_processor_main.py
pdf_processor/schemas/: pdf_completo.avsc
scripts/: create_models.sh  create_topics.py  publish_pdf_urls.py  run_services.py  setup_env.py
shared/: __init__.py  fastapi_config.py  kafka_config.py  logging_config.py  topic_config.py
shared/src/shared/: kafka_config.py
