[tool.poetry]
name = "pdf-processor"
version = "0.1.0"
description = "Serviço para processamento de PDFs"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.3.0"
requests = "^2.31.0"
PyPDF2 = "^3.0.0"
python-dotenv = "^1.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
attrs = "^23.2.0"
cachetools = "^5.3.3"
authlib = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 